# SoundSwitcher

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/: io.github.fabian.SoundSwitcher.autostart.desktop.in  io.github.fabian.SoundSwitcher.desktop.in  soundswitcher.desktop.in
src/: app_icon.cpp  app_icon.h  audio_manager.cpp  audio_manager.h  autostart_manager.cpp  autostart_manager.h  main.cpp  main_window.cpp  main_window.h  settings_store.cpp  settings_store.h  shortcut_manager.cpp  shortcut_manager.h  tray_controller.cpp  tray_controller.h
